--- a/pages/info.html
+++ b/pages/info.html
@@ -45,7 +45,11 @@
             <true>Welcome back!</true>
             <false>It's been a while!</false>
         </check>
-
+    
+    <!-- class stuff-->
+    <h3>My Pet</h3>
+    <p>{{ @myPet->getName() }}</p>
+    <p>{{ @myPet->getColor() }}</p>
         
     </body>
 </html>
